# auth-service

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
database/: env.py
database/versions/: 4c49328e52af_initial.py
src/auth_service/: main.py
src/auth_service/api/: dependencies.py
src/auth_service/api/public/v1/: auth.py
src/auth_service/core/: config.py  database.py  errors.py  security.py
src/auth_service/models/: __init__.py  base.py  m2m.py  users.py
src/auth_service/repositories/: auth_repository.py  base.py
src/auth_service/schemas/: custom_types.py
src/auth_service/schemas/dto/: auth.py  users.py
src/auth_service/schemas/http/: auth.py  users.py
src/auth_service/services/: auth_service.py
tests/: conftest.py
tests/api/: test_auth.py
tests/fixtures/: dependencies.py  users.py
tests/unit/: test_schemas.py
